2004-12-09  Richard Henderson  <rth@redhat.com>

	PR target/17025
	* config/i386/i386.md (testqi_1_maybe_si, andqi_2_maybe_si): New.
	(test_qi_1, andqi_2): Do not promote to simode.

2004-12-07  David Mosberger  <davidm@hpl.hp.com>

	PR target/18443
	* config/ia64/ia64.c (ia64_assemble_integer): Add support for
	emitting unaligned pointer-sized integers.

2004-12-05  Richard Henderson  <rth@redhat.com>

	PR target/18841
	* config/alpha/alpha.md (UNSPECV_SETJMPR_ER): New.
	(builtin_setjmp_receiver_er_sl_1): Use it.
	(builtin_setjmp_receiver_er_1): Likewise.
	(builtin_setjmp_receiver_er, exception_receiver_er): Remove.
	(builtin_setjmp_receiver): Don't split for explicit relocs until
	after reload.
	(exception_receiver): Likewise.

2004-12-03  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	2003-10-31  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
	Backport from mainline
	* aclocal.m4 (gcc_AC_FUNC_MMAP_BLACKLIST): Blacklist ultrix*.
	* configure: Rebuilt.

2004-12-03  Richard Henderson  <rth@redhat.com>

	2004-09-24  Richard Henderson  <rth@redhat.com>
	PR rtl-opt/17503
	* regclass.c (subregs_of_mode): Turn into an htab.  Make static.
	(som_hash, som_eq): New.
	(init_subregs_of_mode, record_subregs_of_mode): New.
	(cannot_change_mode_set_regs): Rewrite for htab implementation.
	(invalid_mode_change_p): Likewise.
	* combine.c (gen_lowpart_for_combine): Use record_subregs_of_mode.
	* flow.c (mark_used_regs): Likewise.
	(life_analysis): Use init_subregs_of_mode.
	* regs.h (subregs_of_mode): Remove.
	* rtl.h (init_subregs_of_mode, record_subregs_of_mode): Declare.

2004-12-03  Roger Sayle  <roger@eyesopen.com>

	PR target/9908
	* config/i386/i386.md (*call_value_1): Correct Intel assembler
	syntax by using %A1 instead of %*%1.

2004-12-01  Alan Modra  <amodra@bigpond.net.au>

	PR target/12817
	* config/rs6000/rs6000.c (rs6000_emit_prologue): Use r0 for vrsave.

2004-11-29  Roger Sayle  <roger@eyesopen.com>

	PR rtl-optimization/9771