@@ -1,3 +1,8 @@
+2004-12-10  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR rtl-optimization/16536
+	* gcc.c-torture/execute/restrict-1.c: New test.
+
 2004-12-09  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/16681
