@@ -1,3 +1,11 @@
+2004-12-10  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR rtl-optimization/16536
+	Backport from mainline:
+	2004-06-25  Mark Mitchell  <mark@codesourcery.com>
+	* alias.c (get_alias_set): Adjust setting of
+	DECL_POINTER_ALIAS_SET for pointers to aggregates.
+
 2004-12-09  Richard Henderson  <rth@redhat.com>
 
 	PR target/17025
